# optima

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: sglang-canary.yml
bench/allreduce_ab/: README.md  decode_bench.py  sweep.sh
docs/: DEV_ENVIRONMENT.md  HOW_OPTIMA_WORKS.md  SGLANG_TRACKING.md  SUBMISSION_MODEL_BUILD_SPEC.md  SUBNET_BLUEPRINT.md
examples/miner_moe_fused_experts_torch/: manifest.toml
examples/miner_moe_fused_experts_torch/kernels/: moe.py
examples/miner_moe_fused_experts_torch/metadata/: moe.json
examples/miner_rmsnorm_broken/: manifest.toml
examples/miner_rmsnorm_broken/kernels/: rmsnorm.py
examples/miner_rmsnorm_broken/metadata/: rmsnorm.json
examples/miner_rmsnorm_triton/: manifest.toml
examples/miner_rmsnorm_triton/kernels/: rmsnorm.py
examples/miner_setup_demo/: manifest.toml
examples/miner_silu_broken/: manifest.toml
examples/miner_silu_torch/: manifest.toml
examples/miner_silu_triton/: manifest.toml
optima/: __init__.py  arenas.py  bootstrap.py  bundle_hash.py  chain.py  cli.py  commit_reveal.py  compat.py  dispatch.py  manifest.py  registry.py  sandbox.py  seam.py  slots.py  verify.py
optima/eval/: __init__.py  _launch.py  benchmarks.py  capability.py  kl.py  prompts.py  throughput_kl.py
optima/integrations/: __init__.py  sglang_moe.py  sglang_norm.py  sglang_plugin.py  sglang_silu.py
scripts/: check_sglang.py
tests/: test_arenas.py  test_commit_reveal.py  test_ledger_durability.py  test_rebuild.py  test_static.py  test_verify_cpu.py
tools/profiler/: README.md
(+8 files in other folders)
